# LLM_Desafio

./: README.md  main.py  pyproject.toml
.github/: gitleaks.tom
.github/workflows/: backup.yml  gitleaks.yml
Agente/: Agente copy.ipynb  Agente.ipynb  Agente_ollama.ipynb  Agente_telegram.ipynb  Agente_telegram_save.ipynb  api_memoria.py  app.ipynb  conversaciones.db  ollama_agent_api.py  utils.py
Airflow/: Dockerfile  Dockerfile.fastapi  docker-compose.yaml  ollama_agent.py  ollama_agent_api.py  requirements.txt  requirements_airflow.txt  requirements_fastapi.txt
Airflow/dags/: dag.py
Airflow/data/: embedding.py
Airflow/faiss_index/: index.faiss  index.pkl
Airflow/scripts/: Webscraping.py  embedding.py  ollama_agent.py  ollama_agent_api.py
Airflow/scripts/data/: Articulos.csv  Articulos_limpios.csv
LLM/: inicio.ipynb
WebScrapping/: spacy.ipynb  webscrapping.ipynb
data/: Articulos.csv  Articulos_LLM6.csv
data/BBDD_conversaciones/: conversaciones.db
data/faiss_vectorstore/: index.faiss  index.pkl
data/processed/: Articulos_LLM.csv  Articulos_LLM1.csv  Articulos_LLM2.csv  Articulos_LLM6.csv
data/raw/: Articulos.csv  Articulos2.csv  Articulos5.csv  Articulos_fechas.csv
