[project]
name = "llm-desafio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dateparser>=1.2.1",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "notebook>=7.4.0",
    "numpy>=2.2.4",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "streamlit>=1.44.1",
    "telebot>=0.0.5",
    "uvicorn>=0.34.2",
]
